Add logic for create equipments and user. Logic for assign users to equipments. Logic for cancel bookings. View for success in cancelation and to book

--- a/public/layout/navbar.html
+++ b/public/layout/navbar.html
@@ -12,11 +12,11 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/login.html">Login</a></li>
             <li class="active"><a href="/productView.html">Equipments</a></li>
+            <li class="active"><a href="/cancelBooking.html">Cancel Booking</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class=""><a href="#" class="userName"></a></li>
+          <li class=""><a href="/userDashboard.html" class="userName"></a></li>
           <li class="active"><a href="#" onclick="logout()">Logout</a></li>
         </ul>
       </div><!--/.nav-collapse -->
